#58 fixing align pagination news

--- a/themes/compostedu/sass/_page-templates.scss
+++ b/themes/compostedu/sass/_page-templates.scss
@@ -1478,6 +1478,10 @@
     }
 }
 
+.previous-link {
+    text-align: right;
+}
+
 @include tablet {
     .news-img {
         width: 100%;
